// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-cost-optimization - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Identify and quantify cost savings across Azure subscriptions by analyzing actual costs,
utilization metrics, and generating actionable optimization recommendations. USE FOR:
optimize Azure costs, reduce Azure spending, reduce Azure expenses, analyze Azure costs,
find cost savings, generate cost optimization report, find orphaned resources, rightsize VMs,
cost analysis, reduce waste, Azure spending analysis, find unused resources, optimize Redis
costs. DO NOT USE FOR: deploying resources (use azure-deploy), general Azure diagnostics
(use azure-diagnostics), security issues (use azure-security)
",
  "extractedKeywords": [
    "across",
    "actionable",
    "actual",
    "analysis",
    "analyze",
    "analyzing",
    "app service",
    "azure",
    "azure-deploy",
    "azure-diagnostics",
    "azure-security",
    "cli",
    "container",
    "cosmos",
    "cost",
    "costs",
    "deploying",
    "diagnostics",
    "expenses",
    "find",
    "function",
    "general",
    "generate",
    "generating",
    "identify",
    "issues",
    "key vault",
    "mcp",
    "metrics",
    "monitor",
    "optimization",
    "optimize",
    "orphaned",
    "quantify",
    "recommendations",
    "redis",
    "reduce",
    "report",
    "resources",
    "rightsize",
    "savings",
    "security",
    "spending",
    "sql",
    "storage",
    "subscriptions",
    "unused",
    "utilization",
    "validation",
    "waste",
  ],
  "name": "azure-cost-optimization",
}
`;

exports[`azure-cost-optimization - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "across",
  "actionable",
  "actual",
  "analysis",
  "analyze",
  "analyzing",
  "app service",
  "azure",
  "azure-deploy",
  "azure-diagnostics",
  "azure-security",
  "cli",
  "container",
  "cosmos",
  "cost",
  "costs",
  "deploying",
  "diagnostics",
  "expenses",
  "find",
  "function",
  "general",
  "generate",
  "generating",
  "identify",
  "issues",
  "key vault",
  "mcp",
  "metrics",
  "monitor",
  "optimization",
  "optimize",
  "orphaned",
  "quantify",
  "recommendations",
  "redis",
  "reduce",
  "report",
  "resources",
  "rightsize",
  "savings",
  "security",
  "spending",
  "sql",
  "storage",
  "subscriptions",
  "unused",
  "utilization",
  "validation",
  "waste",
]
`;
